# fs-share

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
fs-share/: Cargo.toml  README.md  screenrecord
fs-share-utils/: Cargo.toml  README.md
fs-share-utils/src/: client.rs  lib.rs  pb.rs  receiver.rs  sender.rs  tf.rs  utils.rs
fs-share-utils/src/broadcast/: receiver.rs  sender.rs
fs-share-utils/src/ip/: mod.rs  unix.rs
fs-share-utils/tests/: addr.rs  receiver.rs
fs-share/src/: cli.rs  main.rs  pb.rs  receiver.rs  sender.rs  utils.rs
share-cli/: Cargo.toml
share-cli/src/: cli.rs  main.rs
share-utils/: Cargo.toml
share-utils/src/: addr.rs  lib.rs  utils.rs
share-utils/tests/: addr.rs  receiver.rs  sender.rs
src/: lib.rs  utils.rs
