[workspace]
resolver = "3"
members = ["fs-share", "fs-share-utils"]

[workspace.dependencies]
anyhow = "1.0"

[profile.release]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
