[package]
name = "fs-share-utils"
version = "0.1.2"
license-file = "LICENSE"
edition.workspace = true
description = "A utility library for file sharing."
repository = "https://github.com/BiswajitThakur/fs-share.git"
homepage = "https://github.com/BiswajitThakur/fs-share.git"

[dependencies]
colored = "2"
indicatif = "0.17.9"
sha2 = "0.10"
rand = "0.9.0"
argon2 = "0.5.3"
whoami = "1.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
dirs = "5.0.1"

