[package]
name = "fs-share"
version = "1.0.0"
edition = "2024"
description = "A cross-platform file-sharing CLI application"
homepage = "https://github.com/BiswajitThakur/fs-share.git"
keywords = ["file", "share", "tcu", "udp", "cli"]
repository = "https://github.com/BiswajitThakur/fs-share.git"

[dependencies]
fs-share-utils = { version = "1.0.0", path = "../fs-share-utils" }
indicatif = "0.17.9"
colored = "2"
anyhow = { workspace = true }
clap = { version = "4.5.20", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }

