[package]
name = "fs-share"
version = "1.0.0"
edition = "2024"
description = "A cross-platform file-sharing CLI application"
homepage = "https://github.com/BiswajitThakur/fs-share.git"
keywords = ["file-transfer", "p2p", "udp", "tcp", "cli"]
categories = ["command-line-utilities", "network-programming"]
repository = "https://github.com/BiswajitThakur/fs-share.git"
authors = ["Biswajit Thakur <biswajit733127@gmail.com>"]

[dependencies]
fs-share-utils = { version = "1.0.0", path = "../fs-share-utils" }
indicatif = "0.17.9"
colored = "2"
anyhow = { workspace = true }
clap = { version = "4.5.20", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }

